Task 92 : Index, insert, update, destroy category

--- a/app/views/admin/shared/_sidebar.slim
+++ b/app/views/admin/shared/_sidebar.slim
@@ -17,4 +17,8 @@
         = link_to new_author_post_path, class: "nav-link" do
           i.fas.fa-pencil-alt
           |  New Article
+      li.nav-item
+        = link_to admin_categories_path, class: "nav-link" do
+          i.nav-icon.fas.fa-address-book
+          |  Category
   button.sidebar-minimizer.brand-minimizer type="button" 
