--- a/app/views/author/posts/_post_form.slim
+++ b/app/views/author/posts/_post_form.slim
@@ -9,7 +9,7 @@
           = f.hidden_field :user_id, value: 1
           = f.hidden_field :public, value: false
           = f.label :category_id, "Category"
-          = f.text_field :category_id, class: "form-control", disabled: "disabled"
+          = f.select :category_id, @category_options, {}, class: "form-control"
           br
           = f.label :title, "Title"
           = f.text_field :title, class: "form-control"
