Task100: Index, show user.

--- a/app/views/admin/shared/_sidebar.slim
+++ b/app/views/admin/shared/_sidebar.slim
@@ -25,4 +25,9 @@
         = link_to new_author_post_path, class: "nav-link" do
           i.nav-icon.fas.fa-pencil-alt
           |  New Article
+      li.nav-item
+        = link_to admin_users_path, class: "nav-link" do
+          i.nav-icon.fas.fa-users-cog
+          |  Users
+      
   button.sidebar-minimizer.brand-minimizer type="button" 
