Author uploads images

--- a/app/assets/stylesheets/admin/custom.scss
+++ b/app/assets/stylesheets/admin/custom.scss
@@ -40,3 +40,9 @@
     color: $state-danger-text;
   }
 }
+
+// =============================Form Control==================================
+
+.form-control{
+  border-radius: 30px;
+}
