--- a/app/views/author/posts/_posts.slim
+++ b/app/views/author/posts/_posts.slim
@@ -2,7 +2,7 @@ tr
   td.text-center
     = post.id
   td
-    = post.category_id
+    = post.category.name
   td
     = post.title
   td.text-center
