Task105 Admin approves post

--- a/app/views/admin/posts/index.slim
+++ b/app/views/admin/posts/index.slim
@@ -6,6 +6,7 @@ table.table.table-responsive-sm.table-hover.table-outline.mb-0
       th Headline
       th.text-center View
       th.text-center Show
-      th.text-center Edit
+      th.text-center Publish
+      th.text-center Status
   tbody
   = render partial: "posts", collection: @posts, as: :post
