--- a/app/views/admin/users/index.slim
+++ b/app/views/admin/users/index.slim
@@ -4,6 +4,9 @@
       h1 Users
       br/
     .content.table-full-width
+      .header= link_to "Create new",
+        new_admin_user_path, class: "btn btn-info btn-sm",
+        style: "margin-bottom: 10px; margin-left: 10px"
       table.table.table-hover
         thead
           tr
@@ -16,3 +19,12 @@
               td= link_to user.name, admin_user_path(user)
               td= user.address
               td= user.email
+              td= user.role
+              - if user.role != "admin"
+                td= link_to edit_admin_user_path(user) do
+                  i.fas.fa-tools
+                td= link_to admin_user_path(user), method: :delete,
+                  data: { confirm: "You are deleting user ! You sure ?" } do
+                  i.far.fa-trash-alt style=("color: red;")
+      .center style=("text-align: center;")
+        = paginate @users, theme: "twitter-bootstrap-3"
