--- a/app/views/admin/users/show.slim
+++ b/app/views/admin/users/show.slim
@@ -18,3 +18,6 @@
           br/
           i.fas.fa-user
           = @user.role
+        - if @user.role != "admin"
+          .edit= link_to "edit",
+            edit_admin_user_path, style: "width: 50%; margin: 0 auto;"
