--- a/app/views/admin/categories/index.slim
+++ b/app/views/admin/categories/index.slim
@@ -3,8 +3,8 @@
     .center style=("text-align: center;") 
       h1 List Category
     .header
-      = link_to "New category", new_admin_category_path,
-        style: "margin-bottom: 10px; margin-left: 10px;"
+      = link_to "New category", new_admin_category_path, class: "btn btn-info btn-sm",
+        style: "margin-bottom: 10px; margin-left: 10px"
     .content.table-full-width
       table.table.table-responsive-sm.table-hover.table-outline.mb-0
         thead.thead-light
