--- a/app/views/admin/shared/_header.slim
+++ b/app/views/admin/shared/_header.slim
@@ -1,8 +1,8 @@
 body
   header.app-header.navbar
-    button.navbar-toggler.sidebar-toggler.d-lg-none.mr-auto data-toggle="sidebar-show" type="button" 
+    button.navbar-toggler.sidebar-toggler.d-lg-none.mr-auto data-toggle="sidebar-show" type="button"
       span.navbar-toggler-icon
-    = link_to admin_root_path, class: "navbar-brand" do
+    = link_to root_path, class: "navbar-brand" do
       = image_tag("/assets/news.png", class: "navbar-brand-full", width: "89", height: "25", alt: "CoreUI Logo")
     button.navbar-toggler.sidebar-toggler.d-md-down-none data-toggle="sidebar-lg-show" type="button" 
       span.navbar-toggler-icon
@@ -11,21 +11,32 @@ body
         = link_to "Dashboard", admin_root_path, class: "nav-link"
     ul.nav.navbar-nav.ml-auto
       li.nav-item.dropdown
-        = link_to image_tag("/assets/8.jpg", alt: "admin", class: "img-avatar"), "#", class: "nav-link", data:{ toggle: :dropdown }, aria:{ haspopup: true, expanded: false }, role: "button"
+      .dropdown
+        button#dropdownMenuButton.btn.btn-secondary.dropdown-toggle aria-expanded="false" aria-haspopup="true" data-toggle="dropdown" type="button" 
+          li= current_user.name
+        .dropdown-menu aria-labelledby="dropdownMenuButton"
         .dropdown-menu.dropdown-menu-right
           .dropdown-header.text-center
             strong Settings
-          = link_to "#", class: "dropdown-item" do
-            i.fa.fa-user
-            | Profile
-          = link_to "#", class: "dropdown-item" do
-            i.fa.fa-wrench
-            | Settings
-          .dropdown-divider
-          = link_to "#", class: "dropdown-item" do
-            i.fa.fa-lock
-            | Logout
-    button.navbar-toggler.aside-menu-toggler.d-md-down-none data-toggle="aside-menu-lg-show" type="button" 
-      span.navbar-toggler-icon
-    button.navbar-toggler.aside-menu-toggler.d-lg-none data-toggle="aside-menu-show" type="button" 
-      span.navbar-toggler-icon
+          - if current_user.author?
+            = link_to author_user_path(current_user) , class: "dropdown-item" do
+              i.fa.fa-user
+              | Profile
+            = link_to edit_author_user_path(current_user), class: "dropdown-item" do
+              i.fa.fa-wrench
+              | Settings
+            .dropdown-divider
+            = link_to destroy_user_session_path, class: "dropdown-item" , method: :delete do
+              i.fa.fa-lock
+              | Logout
+          - else
+            = link_to admin_user_path(current_user), class: "dropdown-item" do
+              i.fa.fa-user
+              | Profile
+            = link_to edit_admin_user_path(current_user), class: "dropdown-item" do
+              i.fa.fa-wrench
+              | Settings
+            .dropdown-divider
+            = link_to destroy_user_session_path, class: "dropdown-item" , method: :delete do
+              i.fa.fa-lock
+              | Logout
