--- a/app/views/admin/users/index.slim
+++ b/app/views/admin/users/index.slim
@@ -13,6 +13,9 @@
             th User name
             th Address
             th Email
+            th Role
+            th Edit
+            th Delete
         tbody
           - @users.each do |user|
             tr
@@ -20,7 +23,15 @@
               td= user.address
               td= user.email
               td= user.role
-              - if user.role != "admin"
+              - if user.admin?
+                -if current_user == user
+                  td= link_to edit_admin_user_path(user) do
+                    i.fas.fa-tools
+                  td= 
+                - else
+                  td= 
+                  td= 
+              - else
                 td= link_to edit_admin_user_path(user) do
                   i.fas.fa-tools
                 td= link_to admin_user_path(user), method: :delete,
