--- a/app/views/shared/_footer.slim
+++ b/app/views/shared/_footer.slim
@@ -5,7 +5,7 @@ footer#footer
         .footer-widget
           .footer-logo
             = link_to "#", class: "logo" do
-              - image_tag "logo.png", alt: ""
+              - image_tag "news.png", alt: ""
           ul.footer-nav
             li
               a href="#"  Privacy Policy
