--- a/app/views/author/posts/_post_form.slim
+++ b/app/views/author/posts/_post_form.slim
@@ -14,6 +14,9 @@
           = f.label :title, "Title"
           = f.text_field :title, class: "form-control"
           br
+          = f.label :image
+          = f.file_field :image
+          br
           = f.label :header, "Header"
           = f.text_area :header, class: "form-control"
           br
