--- a/app/views/static_pages/index.slim
+++ b/app/views/static_pages/index.slim
@@ -23,77 +23,19 @@
             h3.post-title
               a href="blog-post.html"  Ask HN: Does Anybody Still Use JQuery?
     .row
-      .col-md-12
+      .col-md-12.justify-content-start
         .section-title
           h2 Recent Posts
-      .col-md-4
-        .post
-          = link_to "#", class: "post-img" do
-            - image_tag("widget-1.jpg", alt: "")
-          .post-body
-            .post-meta
-              a.post-category.cat-1 href="category.html"  Web Design
-              span.post-date March 27, 2018
-            h3.post-title
-              a href="blog-post.html"  Pagedraw UI Builder Turns Your Website Design Mockup Into Code Automatically
-      .col-md-4
-        .post
-          = link_to "#", class: "post-img" do
-            - image_tag("widget-1.jpg", alt: "")
-          .post-body
-            .post-meta
-              a.post-category.cat-2 href="category.html"  JavaScript
-              span.post-date March 27, 2018
-            h3.post-title
-              a href="blog-post.html"  Chrome Extension Protects Against JavaScript-Based CPU Side-Channel Attacks
-      .col-md-4
-        .post
-          = link_to "#", class: "post-img" do
-            - image_tag("widget-1.jpg", alt: "")
-          .post-body
-            .post-meta
-              a.post-category.cat-3 href="category.html"  Jquery
-              span.post-date March 27, 2018
-            h3.post-title
-              a href="blog-post.html"  Ask HN: Does Anybody Still Use JQuery?
+      = render partial: "recent_posts", collection: @recent_posts[0..2], as: :post
       .clearfix.visible-md.visible-lg
-      .col-md-4
-        .post
-          = link_to "#", class: "post-img" do
-            - image_tag("widget-1.jpg", alt: "")
-          .post-body
-            .post-meta
-              a.post-category.cat-2 href="category.html"  JavaScript
-              span.post-date March 27, 2018
-            h3.post-title
-              a href="blog-post.html"  Why Node.js Is The Coolest Kid On The Backend Development Block!
-      .col-md-4
-        .post
-          = link_to "#", class: "post-img" do
-            = image_tag("post-1.jpg", alt: "")
-          .post-body
-            .post-meta
-              a.post-category.cat-4 href="category.html"  Css
-              span.post-date March 27, 2018
-            h3.post-title
-              a href="blog-post.html"  CSS Float: A Tutorial
-      .col-md-4
-        .post
-          = link_to "#", class: "post-img" do
-            = image_tag("post-1.jpg", alt: "")
-          .post-body
-            .post-meta
-              a.post-category.cat-1 href="category.html"  Web Design
-              span.post-date March 27, 2018
-            h3.post-title
-              a href="blog-post.html"  Tell-A-Tool: Guide To Web Design And Development Tools
+      = render partial: "recent_posts", collection: @recent_posts[3..6], as: :post
     .row
       .col-md-8
         .row
           .col-md-12
             .post.post-thumb
               = link_to "#", class: "post-img" do
-                = image_tag("post-1.jpg", alt: "")
+                = image_tag(Post.last.image.url, alt: "")
               .post-body
                 .post-meta
                   a.post-category.cat-3 href="category.html"  Jquery
@@ -103,7 +45,7 @@
           .col-md-6
             .post
               = link_to "#", class: "post-img" do
-                = image_tag("post-1.jpg", alt: "")
+                = image_tag(Post.last.image.url, alt: "")
               .post-body
                 .post-meta
                   a.post-category.cat-4 href="category.html"  Css
@@ -214,99 +156,6 @@
         .aside-widget.text-center
           = link_to "#", style: "display: inline-block;margin: auto;" do
             - image_tag "ad-1.jpg", class: "img-responsive"
-.section.section-grey
-  .container
-    .row
-      .col-md-12
-        .section-title.text-center
-          h2 Featured Posts
-      .col-md-4
-        .post
-          = link_to "#", class: "post-img" do
-            = image_tag("post-1.jpg", alt: "")
-          .post-body
-            .post-meta
-              a.post-category.cat-2 href="category.html"  JavaScript
-              span.post-date March 27, 2018
-            h3.post-title
-              a href="blog-post.html"  Chrome Extension Protects Against JavaScript-Based CPU Side-Channel Attacks
-      .col-md-4
-        .post
-          = link_to "#", class: "post-img" do
-            = image_tag("post-1.jpg", alt: "")
-          .post-body
-            .post-meta
-              a.post-category.cat-3 href="category.html"  Jquery
-              span.post-date March 27, 2018
-            h3.post-title
-              a href="blog-post.html"  Ask HN: Does Anybody Still Use JQuery?
-      .col-md-4
-        .post
-          = link_to "#", class: "post-img" do
-            = image_tag("post-1.jpg", alt: "")
-          .post-body
-            .post-meta
-              a.post-category.cat-1 href="category.html"  Web Design
-              span.post-date March 27, 2018
-            h3.post-title
-              a href="blog-post.html"  Pagedraw UI Builder Turns Your Website Design Mockup Into Code Automatically
-.section
-  .container
-    .row
-      .col-md-8
-        .row
-          .col-md-12
-            .section-title
-              h2 Most Read
-          .col-md-12
-            .post.post-row
-              = link_to "#", class: "post-img" do
-                = image_tag("post-1.jpg", alt: "")
-              .post-body
-                .post-meta
-                  a.post-category.cat-2 href="category.html"  JavaScript
-                  span.post-date March 27, 2018
-                h3.post-title
-                  a href="blog-post.html"  Chrome Extension Protects Against JavaScript-Based CPU Side-Channel Attacks
-                p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam...
-          .col-md-12
-            .post.post-row
-              = link_to "#", class: "post-img" do
-                = image_tag("post-1.jpg", alt: "")
-              .post-body
-                .post-meta
-                  a.post-category.cat-2 href="category.html"  JavaScript
-                  span.post-date March 27, 2018
-                h3.post-title
-                  a href="blog-post.html"  Why Node.js Is The Coolest Kid On The Backend Development Block!
-                p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam...
-          .col-md-12
-            .post.post-row
-              = link_to "#", class: "post-img" do
-                = image_tag("post-1.jpg", alt: "")
-              .post-body
-                .post-meta
-                  a.post-category.cat-4 href="category.html"  Css
-                  span.post-date March 27, 2018
-                h3.post-title
-                  a href="blog-post.html"  CSS Float: A Tutorial
-                p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam...
-          .col-md-12
-            .post.post-row
-              = link_to "#", class: "post-img" do
-                = image_tag("post-1.jpg", alt: "")
-              .post-body
-                .post-meta
-                  a.post-category.cat-3 href="category.html"  Jquery
-                  span.post-date March 27, 2018
-                h3.post-title
-                  a href="blog-post.html"  Ask HN: Does Anybody Still Use JQuery?
-                p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam...
-          .col-md-12
-            .section-row
-              button.primary-button.center-block Load More
-      .col-md-4
-        .aside-widget.text-center
           = link_to "#", style: "display: inline-block;margin: auto;" do
             - image_tag "ad-1.jpg", class: "img-responsive"
         .aside-widget
@@ -351,5 +200,4 @@
                 a href="#"  JavaScript
               li
                 a href="#"  Website
-  | 1
 = render "shared/footer"
