--- a/app/views/shared/_recent_posts.slim
+++ b/app/views/shared/_recent_posts.slim
@@ -1,4 +1,4 @@
-.post.post-widget
+.post.post-widget#post-widget
   = link_to "#", class: "post-img" do
     - image_tag(post.image.url, alt: "")
   .post-body
