--- a/app/views/static_pages/index.slim
+++ b/app/views/static_pages/index.slim
@@ -22,18 +22,20 @@
               span.post-date March 27, 2018
             h3.post-title
               a href="blog-post.html"  Ask HN: Does Anybody Still Use JQuery?
+
+    / Recent posts
     .row
-      .col-md-12.justify-content-start
+      .col-md-12
         .section-title
           h2 Recent Posts
-      = render partial: "recent_posts", collection: @recent_posts[0..2], as: :post
+      = render partial: "recent_posts", collection: @recent_posts[0..3], as: :post
       .clearfix.visible-md.visible-lg
-      = render partial: "recent_posts", collection: @recent_posts[3..6], as: :post
+      = render partial: "recent_posts", collection: @recent_posts[4..8], as: :post
     .row
       .col-md-8
         .row
-          .col-md-12
-            .post.post-thumb
+          .col-md-6
+            .post
               = link_to "#", class: "post-img" do
                 = image_tag(Post.last.image.url, alt: "")
               .post-body
@@ -43,25 +45,30 @@
                 h3.post-title
                   a href="blog-post.html"  Ask HN: Does Anybody Still Use JQuery?
           .col-md-6
-            .post
+            .post.post-widget
               = link_to "#", class: "post-img" do
-                = image_tag(Post.last.image.url, alt: "")
+                - image_tag("widget-1.jpg", alt: "")
               .post-body
-                .post-meta
-                  a.post-category.cat-4 href="category.html"  Css
-                  span.post-date March 27, 2018
-                h3.post-title
-                  a href="blog-post.html"  CSS Float: A Tutorial
-          .col-md-6
-            .post
-              = link_to "#", class: "post-img" do
-                = image_tag("post-1.jpg", alt: "")
-              .post-body
-                .post-meta
-                  a.post-category.cat-1 href="category.html"  Web Design
-                  span.post-date March 27, 2018
                 h3.post-title
                   a href="blog-post.html"  Tell-A-Tool: Guide To Web Design And Development Tools
+            .post.post-widget
+              = link_to "#", class: "post-img" do
+                - image_tag("widget-1.jpg", alt: "")
+              .post-body
+                h3.post-title
+                  a href="blog-post.html"  Pagedraw UI Builder Turns Your Website Design Mockup Into Code Automatically
+            .post.post-widget
+              = link_to "#", class: "post-img" do
+                - image_tag("widget-1.jpg", alt: "")
+              .post-body
+                h3.post-title
+                  a href="blog-post.html"  Pagedraw UI Builder Turns Your Website Design Mockup Into Code Automatically
+            .post.post-widget
+              = link_to "#", class: "post-img" do
+                - image_tag("widget-1.jpg", alt: "")
+              .post-body
+                h3.post-title
+                  a href="blog-post.html"  Pagedraw UI Builder Turns Your Website Design Mockup Into Code Automatically
           .clearfix.visible-md.visible-lg
           .col-md-6
             .post
@@ -153,11 +160,7 @@
                 span.post-date March 27, 2018
               h3.post-title
                 a href="blog-post.html"  Chrome Extension Protects Against JavaScript-Based CPU Side-Channel Attacks
-        .aside-widget.text-center
-          = link_to "#", style: "display: inline-block;margin: auto;" do
-            - image_tag "ad-1.jpg", class: "img-responsive"
-          = link_to "#", style: "display: inline-block;margin: auto;" do
-            - image_tag "ad-1.jpg", class: "img-responsive"
+        = render "advertisement"
         .aside-widget
           .section-title
             h2 Catagories
