--- a/app/views/static_pages/index.slim
+++ b/app/views/static_pages/index.slim
@@ -33,174 +33,11 @@
       = render partial: "recent_posts", collection: @recent_posts[4..8], as: :post
     .row
       .col-md-8
-        .row
-          .col-md-6
-            .post
-              = link_to "#", class: "post-img" do
-                = image_tag(Post.last.image.url, alt: "")
-              .post-body
-                .post-meta
-                  a.post-category.cat-3 href="category.html"  Jquery
-                  span.post-date March 27, 2018
-                h3.post-title
-                  a href="blog-post.html"  Ask HN: Does Anybody Still Use JQuery?
-          .col-md-6
-            .post.post-widget
-              = link_to "#", class: "post-img" do
-                - image_tag("widget-1.jpg", alt: "")
-              .post-body
-                h3.post-title
-                  a href="blog-post.html"  Tell-A-Tool: Guide To Web Design And Development Tools
-            .post.post-widget
-              = link_to "#", class: "post-img" do
-                - image_tag("widget-1.jpg", alt: "")
-              .post-body
-                h3.post-title
-                  a href="blog-post.html"  Pagedraw UI Builder Turns Your Website Design Mockup Into Code Automatically
-            .post.post-widget
-              = link_to "#", class: "post-img" do
-                - image_tag("widget-1.jpg", alt: "")
-              .post-body
-                h3.post-title
-                  a href="blog-post.html"  Pagedraw UI Builder Turns Your Website Design Mockup Into Code Automatically
-            .post.post-widget
-              = link_to "#", class: "post-img" do
-                - image_tag("widget-1.jpg", alt: "")
-              .post-body
-                h3.post-title
-                  a href="blog-post.html"  Pagedraw UI Builder Turns Your Website Design Mockup Into Code Automatically
-          .clearfix.visible-md.visible-lg
-          .col-md-6
-            .post
-              = link_to "#", class: "post-img" do
-                = image_tag("post-1.jpg", alt: "")
-              .post-body
-                .post-meta
-                  a.post-category.cat-2 href="category.html"  JavaScript
-                  span.post-date March 27, 2018
-                h3.post-title
-                  a href="blog-post.html"  Chrome Extension Protects Against JavaScript-Based CPU Side-Channel Attacks
-          .col-md-6
-            .post
-              = link_to "#", class: "post-img" do
-                = image_tag("post-1.jpg", alt: "")
-              .post-body
-                .post-meta
-                  a.post-category.cat-3 href="category.html"  Jquery
-                  span.post-date March 27, 2018
-                h3.post-title
-                  a href="blog-post.html"  Ask HN: Does Anybody Still Use JQuery?
-          .clearfix.visible-md.visible-lg
-          .col-md-6
-            .post
-              = link_to "#", class: "post-img" do
-                = image_tag("widget-1.jpg", alt: "")
-              .post-body
-                .post-meta
-                  a.post-category.cat-1 href="category.html"  Web Design
-                  span.post-date March 27, 2018
-                h3.post-title
-                  a href="blog-post.html"  Pagedraw UI Builder Turns Your Website Design Mockup Into Code Automatically
-          .col-md-6
-            .post
-              = link_to "#", class: "post-img" do
-                = image_tag("post-1.jpg", alt: "")
-              .post-body
-                .post-meta
-                  a.post-category.cat-2 href="category.html"  JavaScript
-                  span.post-date March 27, 2018
-                h3.post-title
-                  a href="blog-post.html"  Chrome Extension Protects Against JavaScript-Based CPU Side-Channel Attacks
+        = render partial: "category_posts", collection: @categories, as: :category
       .col-md-4
-        .aside-widget
-          .section-title
-            h2 Most Read
-          .post.post-widget
-            = link_to "#", class: "post-img" do
-              - image_tag("widget-1.jpg", alt: "")
-            .post-body
-              h3.post-title
-                a href="blog-post.html"  Tell-A-Tool: Guide To Web Design And Development Tools
-          .post.post-widget
-            = link_to "#", class: "post-img" do
-              - image_tag("widget-1.jpg", alt: "")
-            .post-body
-              h3.post-title
-                a href="blog-post.html"  Pagedraw UI Builder Turns Your Website Design Mockup Into Code Automatically
-          .post.post-widget
-            = link_to "#", class: "post-img" do
-              - image_tag("widget-1.jpg", alt: "")
-            .post-body
-              h3.post-title
-                a href="blog-post.html"  Why Node.js Is The Coolest Kid On The Backend Development Block!
-          .post.post-widget
-            = link_to "#", class: "post-img" do
-              - image_tag("widget-1.jpg", alt: "")
-            .post-body
-              h3.post-title
-                a href="blog-post.html"  Tell-A-Tool: Guide To Web Design And Development Tools
-        .aside-widget
-          .section-title
-            h2 Featured Posts
-          .post.post-thumb
-            = link_to "#", class: "post-img" do
-              = image_tag("post-1.jpg", alt: "")
-            .post-body
-              .post-meta
-                a.post-category.cat-3 href="category.html"  Jquery
-                span.post-date March 27, 2018
-              h3.post-title
-                a href="blog-post.html"  Ask HN: Does Anybody Still Use JQuery?
-          .post.post-thumb
-            = link_to "#", class: "post-img" do
-              = image_tag("post-1.jpg", alt: "")
-            .post-body
-              .post-meta
-                a.post-category.cat-2 href="category.html"  JavaScript
-                span.post-date March 27, 2018
-              h3.post-title
-                a href="blog-post.html"  Chrome Extension Protects Against JavaScript-Based CPU Side-Channel Attacks
+        = render "most_read"
+        = render "featured_posts"
         = render "advertisement"
-        .aside-widget
-          .section-title
-            h2 Catagories
-          .category-widget
-            ul
-              li
-                a.cat-1 href="#" 
-                  | Web Design
-                  span 340
-              li
-                a.cat-2 href="#" 
-                  | JavaScript
-                  span 74
-              li
-                a.cat-4 href="#" 
-                  | JQuery
-                  span 41
-              li
-                a.cat-3 href="#" 
-                  | CSS
-                  span 35
-        .aside-widget
-          .tags-widget
-            ul
-              li
-                a href="#"  Chrome
-              li
-                a href="#"  CSS
-              li
-                a href="#"  Tutorial
-              li
-                a href="#"  Backend
-              li
-                a href="#"  JQuery
-              li
-                a href="#"  Design
-              li
-                a href="#"  Development
-              li
-                a href="#"  JavaScript
-              li
-                a href="#"  Website
+        = render "categories"
+        = render "tags"
 = render "shared/footer"
