--- a/app/assets/stylesheets/lib/style.css
+++ b/app/assets/stylesheets/lib/style.css
@@ -6,7 +6,7 @@ Author: yaminncco
 Colors:
 	Body : #3d455c
 	Headers : #212631
-	Primary : #212631 #4BB92F #ff8700 #0078ff #8d00ff
+	Primary : #212631 #EB5656 #EBA056 #EBEB56 #56EB56
 	Dark : #212631
 	Grey : #eceef2 #a7b3c6 #fbfbfd
 
@@ -164,7 +164,7 @@ RESPONSIVE
 	NAVIGATION
 ===========================================================*/
  #nav {
-     height: 70px;
+     height: 50px;
 }
  #nav:after {
      content: "";
@@ -291,32 +291,68 @@ RESPONSIVE
      transition: 0.2s width;
 }
  .nav-menu li.cat-1 a:after {
-     background-color: #4BB92F;
+     background-color: #EB5656;
 }
  .nav-menu li.cat-2 a:after {
-     background-color: #ff8700;
+     background-color: #EBA056;
 }
  .nav-menu li.cat-3 a:after {
-     background-color: #0078ff;
+     background-color: #EBEB56;
 }
  .nav-menu li.cat-4 a:after {
-     background-color: #8d00ff;
+     background-color: #56EB56;
+}
+ .nav-menu li.cat-5 a:after {
+     background-color: #56EBA0;
+}
+ .nav-menu li.cat-6 a:after {
+     background-color: #56EBEB;
+}
+ .nav-menu li.cat-7 a:after {
+     background-color: #56A0EB;
+}
+ .nav-menu li.cat-8 a:after {
+     background-color: #5656EB;
+}
+ .nav-menu li.cat-9 a:after {
+     background-color: #A056EB;
+}
+ .nav-menu li.cat-10 a:after {
+     background-color: #EB56A0;
 }
  .nav-menu li a:hover, .nav-menu li a:focus {
      background-color: transparent;
      text-decoration: none;
 }
  .nav-menu li.cat-1 a:hover, .nav-menu li.cat-1 a:focus {
-     color: #4BB92F;
+     color: #EB5656;
 }
  .nav-menu li.cat-2 a:hover, .nav-menu li.cat-2 a:focus {
-     color: #ff8700;
+     color: #EBA056;
 }
  .nav-menu li.cat-3 a:hover, .nav-menu li.cat-3 a:focus {
-     color: #0078ff;
+     color: #EBEB56;
 }
  .nav-menu li.cat-4 a:hover, .nav-menu li.cat-4 a:focus {
-     color: #8d00ff;
+     color: #56EB56;
+}
+ .nav-menu li.cat-5 a:hover, .nav-menu li.cat-5 a:focus {
+     color: #56EBA0;
+}
+ .nav-menu li.cat-6 a:hover, .nav-menu li.cat-6 a:focus {
+     color: #56EBEB;
+}
+ .nav-menu li.cat-7 a:hover, .nav-menu li.cat-7 a:focus {
+     color: #56A0EB;
+}
+ .nav-menu li.cat-8 a:hover, .nav-menu li.cat-8 a:focus {
+     color: #5656EB;
+}
+ .nav-menu li.cat-9 a:hover, .nav-menu li.cat-9 a:focus {
+     color: #A056EB;
+}
+ .nav-menu li.cat-10 a:hover, .nav-menu li.cat-10 a:focus {
+     color: #EB56A0;
 }
 /*----------------------------*\
 	search
@@ -543,16 +579,34 @@ RESPONSIVE
      opacity: 0.9;
 }
  .post-meta .post-category.cat-1 {
-     background-color: #4BB92F;
+     background-color: #EB5656;
 }
  .post-meta .post-category.cat-2 {
-     background-color: #ff8700;
+     background-color: #EBA056;
 }
  .post-meta .post-category.cat-3 {
-     background-color: #8d00ff;
+     background-color: #EBEB56;
 }
  .post-meta .post-category.cat-4 {
-     background-color: #0078ff;
+     background-color: #56EB56;
+}
+ .post-meta .post-category.cat-5 {
+     background-color: #56EBA0;
+}
+ .post-meta .post-category.cat-6 {
+     background-color: #56EBEB;
+}
+ .post-meta .post-category.cat-7 {
+     background-color: #56A0EB;
+}
+ .post-meta .post-category.cat-8 {
+     background-color: #5656EB;
+}
+ .post-meta .post-category.cat-9 {
+     background-color: #A056EB;
+}
+ .post-meta .post-category.cat-10 {
+     background-color: #EB56A0;
 }
  .post-meta .post-date {
      font-size: 13px;
@@ -800,31 +854,67 @@ RESPONSIVE
      border-radius:2px;
 }
  .category-widget ul li > a.cat-1 > span {
-     background-color: #4BB92F;
+     background-color: #EB5656;
 }
  .category-widget ul li > a.cat-2 > span {
-     background-color: #ff8700;
+     background-color: #EBA056;
 }
  .category-widget ul li > a.cat-3 > span {
-     background-color: #8d00ff;
+     background-color: #EBEB56;
 }
  .category-widget ul li > a.cat-4 > span {
-     background-color: #0078ff;
+     background-color: #56EB56;
+}
+ .category-widget ul li > a.cat-5 > span {
+     background-color: #56EBA0;
+}
+ .category-widget ul li > a.cat-6 > span {
+     background-color: #56EBEB;
+}
+ .category-widget ul li > a.cat-7 > span {
+     background-color: #56A0EB;
+}
+ .category-widget ul li > a.cat-8 > span {
+     background-color: #5656EB;
+}
+ .category-widget ul li > a.cat-9 > span {
+     background-color: #A056EB;
+}
+ .category-widget ul li > a.cat-10 > span {
+     background-color: #EB56A0;
 }
  .category-widget ul li > a:hover, .category-widget ul li > a:focus {
      text-decoration:none;
 }
  .category-widget ul li > a.cat-1:hover, .category-widget ul li > a.cat-1:focus {
-     color: #4BB92F;
+     color: #EB5656;
 }
  .category-widget ul li > a.cat-2:hover, .category-widget ul li > a.cat-2:focus {
-     color: #ff8700;
+     color: #EBA056;
 }
  .category-widget ul li > a.cat-3:hover, .category-widget ul li > a.cat-3:focus {
-     color: #0078ff;
+     color: #EBEB56;
 }
  .category-widget ul li > a.cat-4:hover, .category-widget ul li > a.cat-4:focus {
-     color: #8d00ff;
+     color: #56EB56;
+}
+ .category-widget ul li > a.cat-5:hover, .category-widget ul li > a.cat-5:focus {
+     color: #56EBA0;
+}
+ .category-widget ul li > a.cat-6:hover, .category-widget ul li > a.cat-6:focus {
+     color: #56EBEB;
+}
+ .category-widget ul li > a.cat-7:hover, .category-widget ul li > a.cat-7:focus {
+     color: #56A0EB;
+}
+ .category-widget ul li > a.cat-8:hover, .category-widget ul li > a.cat-8:focus {
+     color: #5656EB;
+}
+ .category-widget ul li > a.cat-9:hover, .category-widget ul li > a.cat-9:focus {
+     color: #A056EB;
+}
+ .category-widget ul li > a.cat-10:hover, .category-widget ul li > a.cat-10:focus {
+     color: #EB56A0;
 }
 /*----------------------------*\
 	tags
