--- a/app/views/posts/index.slim
+++ b/app/views/posts/index.slim
@@ -1,4 +1,3 @@
-= render "shared/header"
 .session
   .container
     .row style="margin-top: 30px;"
@@ -17,12 +16,11 @@
                   - image_tag(post.image.url, alt: "")
                 .post-body
                   .post-meta
-                    = link_to "#", class: "post-category cat-1" do
+                    = link_to "#", class: "post-category cat-#{post.category.id}" do
                       = post.category.name
                     span.post-date
                       = post.updated_at.strftime("%b %d, %Y")
                   h3.post-title
                     = link_to post.title, "#"
       = paginate @post_results, theme: "twitter-bootstrap-3"
-    .center style=("margin: 0 auto; width: 50%")
       = render "shared/footer"
