--- a/app/views/shared/_footer.slim
+++ b/app/views/shared/_footer.slim
@@ -4,7 +4,7 @@ footer#footer
       .col-md-5
         .footer-widget
           .footer-logo
-            = link_to "#", class: "logo" do
+            = link_to root_path, class: "logo" do
               - image_tag "news.png", alt: ""
           ul.footer-nav
             li
