Task119 : Show posts details

--- a/app/views/shared/_footer.slim
+++ b/app/views/shared/_footer.slim
@@ -1,6 +1,6 @@
 footer#footer
   .container
-    .row
+    .row style=("float: left;")
       .col-md-5
         .footer-widget
           .footer-logo
