--- a/app/views/posts/index.slim
+++ b/app/views/posts/index.slim
@@ -22,5 +22,6 @@
                       = post.updated_at.strftime("%b %d, %Y")
                   h3.post-title
                     = link_to post.title, "#"
-      = paginate @post_results, theme: "twitter-bootstrap-3"
+      .center style=("margin: 0 auto; width: 50%")
+        = paginate @post_results, theme: "twitter-bootstrap-3"
       = render "shared/footer"
