--- a/app/views/shared/_header.slim
+++ b/app/views/shared/_header.slim
@@ -6,7 +6,7 @@ body
           .nav-logo
             = link_to root_path, class: "logo" do
               - image_tag "news.png", alt: ""
-          ul.nav-menu.nav.navbar-nav style=("margin-top: 10px")
+          ul.nav-menu.nav.navbar-nav
             li
               a href="category.html"  News
             li
