--- a/app/views/static_pages/_most_read.slim
+++ b/app/views/static_pages/_most_read.slim
@@ -1,6 +1,6 @@
-  .post.post-widget
-    = link_to "#", class: "post-img" do
-      - image_tag(@post.image.url, alt: "")
-    .post-body
-      h3.post-title
-        = link_to @post.title, "#"
+.post.post-widget
+  = link_to post_path(post), class: "post-img" do
+    - image_tag(post.image.url, alt: "")
+  .post-body
+    h3.post-title
+      = link_to post.title, post_path(post)
