--- a/app/views/static_pages/_post_shares.slim
+++ b/app/views/static_pages/_post_shares.slim
@@ -1,13 +1,9 @@
-.post-shares.sticky-shares
-  a.share-facebook href="#" 
-    i.fa.fa-facebook
-  a.share-twitter href="#" 
-    i.fa.fa-twitter
-  a.share-google-plus href="#" 
-    i.fa.fa-google-plus
-  a.share-pinterest href="#" 
-    i.fa.fa-pinterest
-  a.share-linkedin href="#" 
-    i.fa.fa-linkedin
-  a href="#" 
-    i.fa.fa-envelope
+.post-shares.sticky-shares style=("position: fixed; top: 80px; left: 88px;")
+  = link_to "https://www.facebook.com/" do
+    i.fab.fa-facebook
+  = link_to "#" do
+    i.fab.fa-twitter
+  = link_to "#" do
+    i.fab.fa-google-plus
+  = link_to "#" do
+    i.fab.fa-instagram
