--- a/app/views/static_pages/_post_shares.slim
+++ b/app/views/static_pages/_post_shares.slim
@@ -1,4 +1,4 @@
-.post-shares.sticky-shares style=("position: fixed; top: 80px; left: 88px;")
+.post-shares.sticky-shares
   = link_to "https://www.facebook.com/" do
     i.fab.fa-facebook
   = link_to "#" do
