--- a/app/views/shared/_header.slim
+++ b/app/views/shared/_header.slim
@@ -19,7 +19,10 @@ body
                 li.nav-item.dropdown
                   .dropdown
                     button#dropdownMenuButton.btn.btn-secondary.dropdown-toggle aria-expanded="false" aria-haspopup="true" data-toggle="dropdown" type="button" 
-                      li= current_user.name
+                      li
+                      | Hi, 
+                      strong
+                        = first_name(current_user.name)
                     .dropdown-menu aria-labelledby="dropdownMenuButton"
                     .dropdown-menu.dropdown-menu-right
                       .dropdown-header.text-center
@@ -42,33 +45,3 @@ body
                 = link_to new_user_session_path do
                   i.fas.fa-sign-in-alt
                   |  Login
-      #nav-aside
-        .section-row
-          ul.nav-aside-menu
-            li
-              a href="index.html"  Home
-            li
-              a href="about.html"  About Us
-            li
-              a href="#"  Join Us
-            li
-              a href="#"  Advertisement
-            li
-              a href="contact.html"  Contacts
-        .section-row
-          h3 Follow us
-          ul.nav-aside-social
-            li
-              a href="#" 
-                i.fa.fa-facebook
-            li
-              a href="#" 
-                i.fa.fa-twitter
-            li
-              a href="#" 
-                i.fa.fa-google-plus
-            li
-              a href="#" 
-                i.fa.fa-pinterest
-        button.nav-aside-close
-          i.fa.fa-times
